added body-copy utility class

--- a/frontend/app/views/joiner/staff.scala.html
+++ b/frontend/app/views/joiner/staff.scala.html
@@ -52,7 +52,7 @@
                         }
                         <div class="user-welcome__content">
                             @for(name <- displayName){
-                                <h3 class="user-welcome__title">Hello <strong>@displayName</strong>. Not you? <a href="@Config.idWebAppUrl/signout">Sign out</a></h3>
+                                <h3 class="user-welcome__title u-body-copy">Hello <strong>@displayName</strong>. Not you? <a href="@Config.idWebAppUrl/signout">Sign out</a></h3>
                             }
                             <div class="user-welcome__info">
                                 <p>Glad to see you've decided to join Guardian Staff Membership.</p>
