added body-copy utility class styles

--- a/frontend/assets/stylesheets/base/_type.scss
+++ b/frontend/assets/stylesheets/base/_type.scss
@@ -23,6 +23,11 @@ body {
     line-height: 1.4;
 }
 
+.u-body-copy {
+    font-weight: normal;
+    @include fs-bodyCopy(2);
+}
+
 /* Base headings
    ========================================================================== */
 
