--- a/frontend/app/views/fragments/oauth/testUsersWrongGroup.scala.html
+++ b/frontend/app/views/fragments/oauth/testUsersWrongGroup.scala.html
@@ -2,5 +2,5 @@
 
 <p>
     You need to be added to the right Google Group to create test users - contact
-    <a href="mailto:@Config.membershipSupportStaffEmail">@Config.membershipSupportStaffEmail</a> if you definitely need access.
+    <a href="mailto:@Config.membershipDevEmail">@Config.membershipDevEmail</a> if you definitely need access.
 </p>
