--- a/frontend/app/views/fragments/event/item.scala.html
+++ b/frontend/app/views/fragments/event/item.scala.html
@@ -23,17 +23,7 @@
                     <div class="event-item__time" itemprop="startDate" content="@event.start">@event.start.pretty</div>
 
                     <div class="event-item__location" itemprop="location" itemscope itemtype="http://schema.org/Place">
-                        @if(event.venue.name) {
-                            <span class="event-item__location-name" itemprop="name">@event.venue.name</span>
-                        }
-                        @for(location <- event.venue.address) {
-                            @if(location.city) {
-                                <span class="event-item__location-address" itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">,
-                                    <span itemprop="addressLocality">@location.city</span>,
-                                    <span itemprop="postalCode">@location.postal_code</span>
-                                </span>
-                            }
-                        }
+                        @fragments.event.addressSummary(event)
                     </div>
 
                     @if(isHero) {
