Remove need for isReversed flag

--- a/frontend/app/views/event/page.scala.html
+++ b/frontend/app/views/event/page.scala.html
@@ -84,7 +84,7 @@
                     }
                 </div>
                 <div class="event-details__location">
-                    @fragments.event.addressSummary(event, isReverse=true)
+                    @fragments.event.addressSummary(event)
                 </div>
             </div>
             @if(event.isNoTicketEvent == false) {
