--- a/frontend/app/views/staff/unauthorised.scala.html
+++ b/frontend/app/views/staff/unauthorised.scala.html
@@ -1,4 +1,4 @@
-@(errorOpt: Option[String] = None, errorTemplateOpt: Option[String] = None, staffEmail: String = "")
+@(flash: model.Flash.Message, errorTemplateOpt: Option[String] = None, staffEmail: String = "")
 
 @import configuration.Config
 
@@ -11,8 +11,8 @@
 
         <section class="page-section">
             <div class="page-section__content">
-                @for(error <- errorOpt) {
-                    <p>@error</p>
+                @for(text <- flash.textOpt) {
+                    <p>@text</p>
                 }
 
                 @for(errorTemplate <- errorTemplateOpt) {
