--- a/frontend/app/views/joiner/staff.scala.html
+++ b/frontend/app/views/joiner/staff.scala.html
@@ -22,7 +22,7 @@
 
     <main class="page-container__inner" role="main">
 
-        @fragments.notifications.flashMessage(error)
+        @fragments.notifications.flashMessage(flash)
 
         @fragments.page.pageHeader("Guardian Staff Membership",
             Some("All permanent Guardian staff can sign up to the Partner tier of Guardian Membership for free (equivalent to £15/month)"))
