--- a/frontend/assets/stylesheets/components/_flash-message.scss
+++ b/frontend/assets/stylesheets/components/_flash-message.scss
@@ -2,11 +2,18 @@
     @include fs-data(4);
     margin-top: rem($gs-baseline / 2);
     padding: rem(7px) rem(($gs-baseline / 3) * 2);
+    border-top: 1px solid;
+    border-bottom: 1px solid;
 }
 
 .flash-message--error {
-    background-color: $flash-message-error;
-    border-bottom: rem(1px) solid lighten($newsRed, 35%);
-    border-top: rem(1px) solid lighten($newsRed, 35%);
-    color: $newsRed;
+    background-color: $flash-error-background;
+    border-color: $flash-error-border;
+    color: $flash-error-color;
+}
+
+.flash-message--success {
+    background-color: $flash-success-background;
+    border-color: $flash-success-border;
+    color: $flash-success-color;
 }
