Add skip navigation link

--- a/frontend/app/views/main.scala.html
+++ b/frontend/app/views/main.scala.html
@@ -70,12 +70,12 @@
         <script src="//cdn.optimizely.com/js/2012460034.js"></script>
     </head>
     <body>
-
+        <a class="u-h skip" href="#container">Skip to main content</a>
 
         @* ===== Anything in here will be hidden for old browsers ===== *@
         <div class="container-global">
             @fragments.header()
-            <div class="page-side-margins">
+            <div class="page-side-margins" id="container">
             @if(isBrochure != true) {
                 <div class="page-container @if(containerPadding){page-container--with-padding}">
             }
