--- a/frontend/app/views/fragments/tier/tierHeader.scala.html
+++ b/frontend/app/views/fragments/tier/tierHeader.scala.html
@@ -6,6 +6,6 @@
         @tier
     </h3>
     <div class="tier-header__pricing">
-        @fragments.benefits.priceInfo(tier=tier, isReversable=true)
+        @fragments.benefits.priceInfo(tier=tier, isReversible=true)
     </div>
 </div>
