--- a/frontend/app/views/fragments/tier/benefits.scala.html
+++ b/frontend/app/views/fragments/tier/benefits.scala.html
@@ -42,7 +42,7 @@
                     @tier
                 </h2>
                 <div class="tier-header__pricing">
-                    @fragments.benefits.priceInfo(tier=tier, isReversable=true)
+                    @fragments.benefits.priceInfo(tier=tier, isReversible=true)
                 </div>
             </div>
         </div>
