Remove info-container and replace with functional layout on final pages

--- a/frontend/app/views/fragments/event/ticketSales.scala.html
+++ b/frontend/app/views/fragments/event/ticketSales.scala.html
@@ -32,7 +32,7 @@
                     @defining(model.TicketSaleDates.datesFor(event, ticket)) { ticketSaleDates =>
 
                         @if(ticketSaleDates.anyoneCanBuyTicket) {
-                            <button class="js-toggle fake-link right-align sales-dates__toggle"
+                            <button class="js-toggle fake-link u-align-right sales-dates__toggle"
                                     data-toggle-label="Hide"
                                     data-toggle="js-event-ticket-dates-@event.id">
                                 Show
