--- a/frontend/app/views/info/giftingPlaceholder.scala.html
+++ b/frontend/app/views/info/giftingPlaceholder.scala.html
@@ -1,16 +1,20 @@
 @import configuration.Config
 
-@main("Gifting", htmlClass = "help") {
+@main("Gifting", htmlClass="help", containerPadding=false) {
 
-    @fragments.layout.sectionHeader("Gifting")
+    <main role="main" class="page-content page-container__inner">
 
-    <div class="info-container">
+        @fragments.page.pageHeader("Gifting")
 
-        <h2 class="section-body-headline">Gifting is coming soon</h2>
-        <div class="help-intro">
-            <p>If you'd like to register your interest in gifting a friend with Guardian Membership, or give feedback about how you'd like gifting to work, just
-                send us a message at <a href="mailto:@Config.membershipFeedback" class="u-underline">@Config.membershipFeedback</a>.</p>
-        </div>
 
-    </div>
+        <section class="page-section page-section--bordered">
+            <div class="page-section__lead-in">
+                <h2 class="page-section__headline">Gifting is coming soon</h2>
+            </div>
+            <div class="page-section__content copy">
+                <p>If you'd like to register your interest in gifting a friend with Guardian Membership, or give feedback about how you'd like gifting to work, just
+                    send us a message at <a href="mailto:@Config.membershipFeedback" class="u-underline">@Config.membershipFeedback</a>.</p>
+            </div>
+        </section>
+    </main>
 }
