--- a/frontend/app/views/testing/testUsers.scala.html
+++ b/frontend/app/views/testing/testUsers.scala.html
@@ -2,34 +2,35 @@
 
 @import configuration.Config
 
-@main("Test Users") {
+@main("Test Users", containerPadding=false) {
 
-    @fragments.layout.sectionHeader("Test Users")
+    <main role="main" class="page-content page-container__inner">
 
-    <div class="info-container">
+        @fragments.page.pageHeader("Test Users")
 
-        <h2 class="section-body-headline">New Test User key: <strong>@userString</strong>
-            <button class="clipboard-button icon-copy-to-clipboard js-copy-to-clipboard-button" data-clipboard-text="@userString"></button>
-        </h2>
-
-        <section class="user-detail-intro">
-            <p>Your user will be valid for the next half hour. </p>
-            <p>When registering please populate the following fields with your new test user key.</p>
+        <section class="page-section">
+            <div class="page-section__content copy">
+                <h2 class="section-body-headline">New Test User key: <strong>@userString</strong>
+                    <button class="clipboard-button icon-copy-to-clipboard js-copy-to-clipboard-button" data-clipboard-text="@userString"></button>
+                </h2>
+                <div class="text-intro">
+                    <p>Your user will be valid for the next half hour. When registering please populate the following fields with your new test user key.</p>
+                </div>
+                <div class="aside-panel">
+                    <ul class="u-unstyled">
+                        <li class="user-detail-list-item">First Name: <strong>@userString</strong></li>
+                        <li class="user-detail-list-item">Username: <strong>@userString</strong></li>
+                        <li class="user-detail-list-item">Email: <strong>@userString@@gu.com</strong></li>
+                    </ul>
+                </div>
+                <div class="signin__actions">
+                    <div class="signin__register">
+                        <a class="action action--no-bottom-margin" href="@Config.idWebAppRegisterUrl("/")" target="_blank">Register Now</a>
+                        <p class="text-info">(Opens in new window)</p>
+                    </div>
+                </div>
+            </div>
         </section>
 
-        <ul class="user-detail-list u-unstyled">
-            <li class="user-detail-list-item">First Name: <strong>@userString</strong></li>
-            <li class="user-detail-list-item">Username: <strong>@userString</strong></li>
-            <li class="user-detail-list-item">Email: <strong>@userString@@gu.com</strong></li>
-        </ul>
-
-        <div class="signin__actions">
-            <div class="signin__register">
-                <a class="action action--no-bottom-margin" href="@Config.idWebAppRegisterUrl("/")" target="_blank">Register Now</a>
-                <i class="info">(Opens in new window)</i>
-            </div>
-
-        </div>
-
-    </div>
+    </main>
 }
