--- a/frontend/assets/stylesheets/mixins/_common.scss
+++ b/frontend/assets/stylesheets/mixins/_common.scss
@@ -1,11 +1,15 @@
-@import 'components/bower-components/sass-mq/mq';
+// =============================================================================
+// Mixins
+// =============================================================================
+
+@import '../components/bower-components/sass-mq/mq';
 // Guss - https://github.com/guardian/guss
 // =============================================================================
-@import 'components/bower-components/guss-rem/rem';
-@import 'components/bower-components/guss-typography/typography';
-@import 'components/bower-components/guss-css3/css3';
-@import 'components/bower-components/guss-layout/columns';
-@import 'components/bower-components/guss-layout/row';
+@import '../components/bower-components/guss-rem/rem';
+@import '../components/bower-components/guss-typography/typography';
+@import '../components/bower-components/guss-css3/css3';
+@import '../components/bower-components/guss-layout/columns';
+@import '../components/bower-components/guss-layout/row';
 
 // The grid system is already imported in the _vars.scss file where it's needed
 // @import 'components/guss-grid-system/_grid-system';
