--- a/frontend/assets/stylesheets/state/_responsive.scss
+++ b/frontend/assets/stylesheets/state/_responsive.scss
@@ -1,3 +1,7 @@
+/* ==========================================================================
+   State - Responsive Utilities
+   ========================================================================== */
+
 .hidden-mobile {
     @include mq($until: tablet) {
         display: none !important;
@@ -20,19 +24,4 @@
     @include mq(mobileLandscape) {
         display: none !important;
     }
-}
-
-/**
- * User state
- */
-
-.id--signed-out .sign-in-required,
-.id--signed-in .sign-in-hidden,
-.tier-required,
-.member--has-tier .tier-hidden {
-    display: none !important;
-}
-
-.member--has-tier .tier-required {
-    display: block !important;
 }
