--- a/frontend/assets/stylesheets/base/_type.scss
+++ b/frontend/assets/stylesheets/base/_type.scss
@@ -23,11 +23,6 @@ body {
     line-height: 1.4;
 }
 
-.u-body-copy {
-    font-weight: normal;
-    @include fs-bodyCopy(2);
-}
-
 /* Base headings
    ========================================================================== */
 
@@ -85,4 +80,31 @@ blockquote {
             border-color: $c-neutral2;
         }
     }
+}
+
+/* Text Utilties
+   ========================================================================== */
+
+.u-body-copy {
+    font-weight: normal;
+    @include fs-bodyCopy(2);
+}
+
+.text-intro {
+    margin: rem($gs-baseline * 2) 0 rem($gs-baseline * 3);
+}
+
+.text-info {
+    @include fs-data(2);
+    color: $c-neutral3;
+    margin: rem($gs-baseline) 0;
+    display: block;
+}
+
+.case--lower {
+    text-transform: lowercase;
+}
+
+.case--capitalize {
+    text-transform: capitalize;
 }
