--- a/frontend/assets/stylesheets/components/_action.scss
+++ b/frontend/assets/stylesheets/components/_action.scss
@@ -1,3 +1,7 @@
+/* ==========================================================================
+   Actions
+   ========================================================================== */
+
 %action {
     margin: $gs-baseline 0;
     display: inline-block;
@@ -349,5 +353,19 @@
     @include mq(tablet) {
         width: auto;
         float: right;
+    }
+}
+
+.clipboard-button {
+    text-align: center;
+    border-radius: rem(4px);
+    border: 0;
+    background-color: $white;
+    vertical-align: top;
+    &.zeroclipboard-is-hover {
+        background-color: $white;
+    }
+    &.zeroclipboard-is-active {
+        background-color: $white;
     }
 }
