--- a/frontend/assets/stylesheets/components/_asides.scss
+++ b/frontend/assets/stylesheets/components/_asides.scss
@@ -8,6 +8,13 @@
     margin-bottom: rem($gs-gutter);
 }
 
+.aside-panel {
+    background-color: $c-neutral6;
+    border-radius: rem($gs-baseline / 3);
+    padding: rem($gs-baseline * 2);
+    margin-bottom: rem($gs-baseline * 2);
+}
+
 .aside--pull {
     @include mq(desktop) {
         margin-top: -(rem($gs-gutter/2));
