change to markup for the cancel submit button to add throbber and message

--- a/frontend/app/views/tier/cancel/confirm.scala.html
+++ b/frontend/app/views/tier/cancel/confirm.scala.html
@@ -1,8 +1,8 @@
 @(currentTier: com.gu.membership.salesforce.Tier.Tier)(implicit token: play.filters.csrf.CSRF.Token)
 
 @import com.gu.membership.salesforce.Tier
-@import model.Benefits
 @import helper._
+@import views.support.Asset
 
 @main("Cancel Tier") {
 
@@ -26,7 +26,13 @@
 
         <form method="POST" action="/tier/cancel/confirm">
             @CSRF.formField
-            <button id="qa-confirm-cancel" class="action action-cta action-cta--confirm action-cta--full-width-mobile">Cancel membership</button>
+            <div class="u-align-right">
+                <button id="qa-confirm-cancel" class="action js-submit-form" type="submit">Cancel membership</button>
+                <div class="is-hidden js-throbber-container">
+                    <img src="@Asset.at("images/wait.gif")" alt="Loading..."/>
+                    <span class="throbber-message">Processing...</span>
+                </div>
+            </div>
         </form>
 
     </section>
