Collect message and warning styles

--- a/frontend/assets/stylesheets/style.scss
+++ b/frontend/assets/stylesheets/style.scss
@@ -31,24 +31,26 @@
 @include grid-system;
 @include guss-row-utility;
 @include guss-columns-utility;
+
 @import 'layout/layout';
 @import 'layout/footer';
 @import 'layout/header';
 @import 'layout/headings';
 @import 'layout/side-margins';
 @import 'layout/homeslice';
-@import 'components/signpost';
 
 /* ==========================================================================
-   Icons
+   Module
+   ========================================================================== */
+
+/* Icons
    ========================================================================== */
 
 @import 'icons/icons';
 @import 'icons/icons-cards';
 @import 'components/icons';
 
-/* ==========================================================================
-   Nav
+/* Nav
    ========================================================================== */
 
 @import 'nav/nav';
@@ -56,9 +58,7 @@
 @import 'nav/control';
 @import 'nav/brand-bar';
 
-
-/* ==========================================================================
-   Membership components
+/* Membership Components
    ========================================================================== */
 
 @import 'components/grid';
@@ -72,13 +72,14 @@
 @import 'components/pricing';
 @import 'components/patterns';
 @import 'components/signpost';
-@import 'components/flash-message';
 @import 'components/help';
 @import 'components/modal';
+@import 'components/messages';
+@import 'components/warnings';
 
-/* ==========================================================================
-   Membership pages
+/* Membership Pages
    ========================================================================== */
+// TODO: These are conceptually no different to components (modules), merge them.
 
 @import 'pages/events-detail';
 @import 'pages/events-summary';
