--- a/frontend/assets/stylesheets/components/_warnings.scss
+++ b/frontend/assets/stylesheets/components/_warnings.scss
@@ -1,3 +1,36 @@
+/* ==========================================================================
+   Warnings
+   ========================================================================== */
+
+/* JS Warning
+   ========================================================================== */
+
+.js-warning {
+   background-color: #e9e939;
+   padding: rem(5px);
+   font-size: 1.4rem;
+   text-align: center;
+   opacity: .8;
+}
+
+.js-warning p {
+   margin: 0;
+}
+
+// hide JS warning messages by default
+.js-warning {
+   display: none;
+}
+
+// show the container if any JS requirement fails
+.js-off .js-warning {
+   display: block;
+}
+
+
+/* Browser Warning
+   ========================================================================== */
+
 // don't show the site itself to broken browsers :(
 .js-ancient-browser .container-global {
     display: none !important;
