--- a/frontend/app/views/tier/cancel/confirm.scala.html
+++ b/frontend/app/views/tier/cancel/confirm.scala.html
@@ -24,10 +24,10 @@
             </div>
         </div>
 
-        <form method="POST" action="/tier/cancel/confirm">
+        <form method="POST" action="/tier/cancel/confirm" class="js-form">
             @CSRF.formField
             <div class="u-align-right">
-                <button id="qa-confirm-cancel" class="action js-submit-form" type="submit">Cancel membership</button>
+                <button id="qa-confirm-cancel" class="action js-form-submit" type="submit">Cancel membership</button>
                 <div class="is-hidden js-throbber-container">
                     <img src="@Asset.at("images/wait.gif")" alt="Loading..."/>
                     <span class="throbber-message">Processing...</span>
