--- a/frontend/app/views/staff/unauthorised.scala.html
+++ b/frontend/app/views/staff/unauthorised.scala.html
@@ -1,4 +1,4 @@
-@(flash: model.Flash.Message, errorTemplateOpt: Option[String] = None, staffEmail: String = "")
+@(flashMessageOpt: Option[model.FlashMessage], errorTemplateOpt: Option[String] = None, staffEmail: String = "")
 
 @import configuration.Config
 
