changed name to loader

--- a/frontend/app/views/tier/cancel/confirm.scala.html
+++ b/frontend/app/views/tier/cancel/confirm.scala.html
@@ -26,9 +26,9 @@
             @CSRF.formField
             <div class="u-align-right">
                 <button id="qa-confirm-cancel" class="action js-form-submit" type="submit">Cancel membership</button>
-                <div class="is-hidden js-throbber-container">
+                <div class="is-hidden js-loader-container">
                     <img src="@Asset.at("images/wait.gif")" alt="Loading..."/>
-                    <span class="throbber-message">Processing...</span>
+                    <span class="loader-message">Processing...</span>
                 </div>
             </div>
         </form>
