--- a/frontend/assets/stylesheets/style.scss
+++ b/frontend/assets/stylesheets/style.scss
@@ -74,7 +74,7 @@
 @import 'components/signpost';
 @import 'components/help';
 @import 'components/modal';
-@import 'components/throbber';
+@import 'components/loader';
 @import 'components/messages';
 @import 'components/warnings';
 
