dropped sections from home page onto about page

--- a/frontend/assets/stylesheets/layout/_homeslice.scss
+++ b/frontend/assets/stylesheets/layout/_homeslice.scss
@@ -1,3 +1,6 @@
+//TODO the patron page and the about page have new designs coming to align the layout of these pages with the
+//TODO homepage. When the designs are ready then would be a good time to refactor this work.
+
 /*
 
     .home-slice containers display site brochure content wether full width or cropped to breakpoint with
